# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.30 2005/01/08 09:35:01 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  08 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Partial rewrite of partitioning code in x86Template. No longer shells out to
  parted to perform actions, now uses all pyparted calls. Code "works" in a
  test, but still needs lots of TLC. Also modified tests/install.py to work
  with x86Template and GLIClientConfiguration.

  07 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Initial move of partitioning code from ArchTemplate to x86Template.

  07 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added grp_install and services to InstallProfile. forgot about the set_root_password

  07 Jan 2005; Preston Cody <codeman@gentoo.org>
  Fixed a few more edit_configs.  fixed a chroot multicommand bug thanks to agaffney.
  Test Install ran very well (skipping partitioning).

  05 Jan 2005; Preston Cody <codeman@gentoo.org>
  My mid-day update.  rewrote mount_local_partitions for order of mounting. fixed prepare_chroot
  rewrote configure_fstab and install_bootloader for new partition format.  fixed a few _edit_configs.
  some may still have eluded me.

  05 Jan 2005; Preston Cody <codeman@gentoo.org>
  Overhauled the entire ArchTemplate and did a lot of other misc fixes in order to test it.
  Just finished mount_local_partitions in GLIArchitectureTemplate

  05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added get_num_sectors() to GLIStorageDevice.

  04 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  GLIStorageDevice now tracks partition boundaries in sectors instead of cylinders.
  Also now ignores <=100 sectors for free space. Removed remaining depends stuff
  from GLIInstallProfile.

  20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  GLIStorageDevice returns "unknown" instead of "" for get_type()

  19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>