@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.30 2005/01/08 09:35:01 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.31 2005/01/09 08:25:16 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  08 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Added mount_network_shares. not able to test it from this computer.  
+  will test when i get back to school.
+  also added start_portmap to the client_controller as an always-do.
+  agaffney says this is needed for NFS mounts to work.
+  
   08 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Partial rewrite of partitioning code in x86Template. No longer shells out to
   parted to perform actions, now uses all pyparted calls. Code "works" in a
